# XP.network-Elrond-Migration

./: .dockerignore  .gitmodules  Dockerfile  README.md  TESTING.md  erdpy-up.py
elrond-event-middleware/: package.json
elrond-event-middleware/src/: events.ts  main.ts
elrond-mint-contract/: Cargo.toml  abi.json  contract_roles.sh  deploy-devnet.interaction.json  erdpy.data-storage.json  issue_esdt.sh  issue_esdt.txt  me.txt  send_esdt.sh  sim-devnet.interactions.json  snippets.sh
elrond-mint-contract/abi/: Cargo.toml
elrond-mint-contract/abi/src/: main.rs
elrond-mint-contract/mandos/: changeBoard.scen.json  changeQuorum.scen.json  changeQuorum_tooBig.scen.json  deployAdder_err.scen.json  deployAdder_then_call.scen.json  deployFactorial.scen.json  remove_everyone.scen.json
elrond-mint-contract/src/: action.rs  events.rs  lib.rs  user_role.rs
elrond-mint-contract/tests/: mandos_test.rs
elrond-mint-contract/wasm/: Cargo.toml
elrond-mint-contract/wasm/src/: lib.rs
elrond-validator-minter/: go.mod  main.go
freezer/: Cargo.toml  lib.rs
ink_egld/: Cargo.toml  lib.rs
testsuite/: config.ini  config.py  consts.py  docker_run.sh  elrond.py  main.py  polkadot.py  requirements.txt  tests.py  validator.py  workaround.json
validator/: .gitignore  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
validator/src/: alice.json  chain_handler.ts  config.json  config.json.example  config.ts  consts.ts  elrond.ts  freezer_abi.json  index.ts  main.ts  polkadot.ts  types.ts
wrap_token/: Cargo.toml  lib.rs
(+7 files in other folders)
